cloud/krystal/buggy-code/buggy-code-errors.txt
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino: In function 'void ProcessTask(void*)':
C:\Users\kryst\Documents\Arduino\Senior Design\iot-sitewise-communications\mariam-cloud\mariam-cloud\mariam-cloud.ino:421:72: error: expected primary-expression before '==' token
  421 |                   if (cloud_Queue, &jsonCopy, 50 / portTICK_PERIOD_MS) == pdPASS) {
      |                                                                        ^~

exit status 1

Compilation error: expected primary-expression before '==' token
